Adjust CustomStream task solution